methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:19: error: not found: value make0
    make0(ligne, 3+7*i)
    ^PictureMono2:25: error: not found: value make0couche
    make0couche(ligne, 0+7*i)
    ^